--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                 <img src="https://movie-phinf.pstatic.net/20210728_221/1627440327667GyoYj_JPEG/movie_image.jpg"
                     class="card-img-top" alt="...">
                 <div class="card-body">
-                    <h5 class="card-title">영화제목</h5>
+                    <h5 class="card-title">액션 영화 제목</h5>
                     <p class="card-text">소제목을 넣어줍니다.</p>
                     <p>⭐⭐⭐</p>
                 </div>
