--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                     class="card-img-top" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">액션 영화 제목</h5>
-                    <p class="card-text">소제목을 넣어줍니다.</p>
+                    <p class="card-text">안녕하세요 재미있게 본 영화를 적어둡니다</p>
                     <p>⭐⭐⭐</p>
                 </div>
                 <p class="mycomment"> 내용을 넣어주세요 </p>
