--- a/index.html
+++ b/index.html
@@ -64,100 +64,119 @@
             margin: 20px auto 20px auto;
         }
 
-        .mypost{
+        .mypost {
             width: 500px;
             margin: 20px auto 20px auto;
             padding: 20px 20px 20px 20px;
             box-shadow: 0px 0px 3px 0px gray;
         }
-        .mybtn{
+
+        .mybtn {
             display: flex;
             flex-direction: row;
             align-items: center;
             justify-content: center;
             margin-top: 20px;
-            
+
         }
 
-        .mybtn>button{
+        .mybtn>button {
             margin: 10px;
         }
-    </style>
+
+.mystars{
+    display: flex;
+            flex-direction: row;
+            align-items: center;
+            justify-content: center;
+}
+</style>
 </head>
 
 <body>
-    <div class="mytitle">
-        <h1>내 생애 최고의 영화들</h1>
-        <button>영화 기록하기</button>
-    </div>
-    <div class="mypost">
-        <div class="form-floating mb-3">
-            <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
-            <label for="floatingInput">영화 url </label> 
+    <body>
+        <div class="mytitle">
+            <h1>내 생애 최고의 영화들</h1>
+            <button>영화 기록하기</button>
         </div>
-        <div class="form-floating mb-3">
-            <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
-            <label for="floatingInput">코멘트</label>
+        <div class="mypost">
+            <div class="form-floating mb-3">
+                <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
+                <label for="floatingInput">영화URL</label>
+            </div>
+            <div class="input-group mb-3">
+                <label class="input-group-text" for="inputGroupSelect01">별점</label>
+                <select class="form-select" id="inputGroupSelect01">
+                    <option selected>-- 선택하기 --</option>
+                    <option value="1">⭐</option>
+                    <option value="2">⭐⭐</option>
+                    <option value="3">⭐⭐⭐</option>
+                    <option value="4">⭐⭐⭐⭐</option>
+                    <option value="5">⭐⭐⭐⭐⭐</option>
+                </select>
+            </div>
+            <div class="form-floating">
+                <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea2" style="height: 100px"></textarea>
+                <label for="floatingTextarea2">코멘트</label>
+              </div>
+            <div class="mybtns">
+                <button type="button" class="btn btn-dark">기록하기</button>
+                <button type="button" class="btn btn-outline-dark">닫기</button>
+            </div>
         </div>
-        <div class="mybtn">
-            <button type="button" class="btn btn-dark">기록하기</button>
-
-            <button type="button" class="btn btn-outline-dark">닫기</button>
-
+        <div class="mycards">
+            <div class="row row-cols-1 row-cols-md-4 g-4">
+                <div class="col">
+                    <div class="card h-100">
+                        <img src="https://movie-phinf.pstatic.net/20210728_221/1627440327667GyoYj_JPEG/movie_image.jpg"
+                             class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">영화 제목이 들어갑니다</h5>
+                            <p class="card-text">여기에 영화에 대한 설명이 들어갑니다.</p>
+                            <p>⭐⭐⭐</p>
+                            <p class="mycomment">나의 한줄 평을 씁니다</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100">
+                        <img src="https://movie-phinf.pstatic.net/20210728_221/1627440327667GyoYj_JPEG/movie_image.jpg"
+                             class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">영화 제목이 들어갑니다</h5>
+                            <p class="card-text">여기에 영화에 대한 설명이 들어갑니다.</p>
+                            <p>⭐⭐⭐</p>
+                            <p class="mycomment">나의 한줄 평을 씁니다</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100">
+                        <img src="https://movie-phinf.pstatic.net/20210728_221/1627440327667GyoYj_JPEG/movie_image.jpg"
+                             class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">영화 제목이 들어갑니다</h5>
+                            <p class="card-text">여기에 영화에 대한 설명이 들어갑니다.</p>
+                            <p>⭐⭐⭐</p>
+                            <p class="mycomment">나의 한줄 평을 씁니다</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100">
+                        <img src="https://movie-phinf.pstatic.net/20210728_221/1627440327667GyoYj_JPEG/movie_image.jpg"
+                             class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">영화 제목이 들어갑니다</h5>
+                            <p class="card-text">여기에 영화에 대한 설명이 들어갑니다.</p>
+                            <p>⭐⭐⭐</p>
+                            <p class="mycomment">나의 한줄 평을 씁니다</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
-
-
-    </div>
-    <div class="mycards">
-        <div class="row row-cols-1 row-cols-md-4 g-4">
-            <div class="card h-100">
-                <img src="https://movie-phinf.pstatic.net/20210728_221/1627440327667GyoYj_JPEG/movie_image.jpg"
-                    class="card-img-top" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title">액션 영화 제목</h5>
-                    <p class="card-text">안녕하세요 재미있게 본 영화를 적어둡니다</p>
-                    <p>⭐⭐⭐</p>
-                </div>
-                <p class="mycomment"> 내용을 넣어주세요 </p>
-            </div>
-            <div class="card h-100">
-                <img src="https://movie-phinf.pstatic.net/20210728_221/1627440327667GyoYj_JPEG/movie_image.jpg"
-                    class="card-img-top" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title">영화제목</h5>
-                    <p class="card-text">소제목을 넣어줍니다.</p>
-                    <p>⭐⭐⭐</p>
-                </div>
-                <p class="mycomment"> 내용을 넣어주세요 </p>
-            </div>
-            <div class="card h-100">
-                <img src="https://movie-phinf.pstatic.net/20210728_221/1627440327667GyoYj_JPEG/movie_image.jpg"
-                    class="card-img-top" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title">영화제목</h5>
-                    <p class="card-text">소제목을 넣어줍니다.</p>
-                    <p>⭐⭐⭐</p>
-                </div>
-                <p class="mycomment"> 내용을 넣어주세요 </p>
-            </div>
-            <div class="card h-100">
-                <img src="https://movie-phinf.pstatic.net/20210728_221/1627440327667GyoYj_JPEG/movie_image.jpg"
-                    class="card-img-top" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title">영화제목</h5>
-                    <p class="card-text">소제목을 넣어줍니다.</p>
-                    <p>⭐⭐⭐</p>
-                </div>
-                <p class="mycomment"> 내용을 넣어주세요 </p>
-            </div>
-
-        </div>
-    </div>
-    </div>
-    </div>
-    </div>
-    </div>
-
+        </body>
 </body>
 
 </html>
